Feat : CheckDaysConverter 개발