@@ -4,26 +4,27 @@ import checkmate.common.util.WeekDayConverter;
 import org.junit.jupiter.api.Test;
 import org.springframework.util.StopWatch;
 
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 class WeekDayConverterTest {
 
     @Test
-    void check() throws Exception{
+    void error() throws Exception{
+        //given
+        String korWeekDays = "월월";
 
-        List<Integer> collect = IntStream.range(1, 1111112)
-                .mapToObj(String::valueOf)
-                .filter(n -> n.matches("[01]+"))
-                .map(Integer::parseInt)
-                .collect(Collectors.toList());
+        //when
+        List<String> weekDayList = Arrays.stream(korWeekDays.split("")).toList();
+        int value = weekDayList.stream()
+                .mapToInt(weekDay -> WeekDayConverter.valueOf(WeekDayConverter.convertKorToEng(weekDay)).getValue())
+                .sum();
 
-        collect.forEach(System.out::println);
+        //then
+        System.out.println(value);
     }
-
 
     @Test
     void 값에서_요일로_변경() throws Exception{
